<resources>
    <!--ACTIVITIES TITLE-->
    <string name="app_name">Books</string>
    <string name="title_activity_main">Books</string>
    <string name="title_activity_add">Add book</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_about">About</string>
    <!--NAVIGATION-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--ACTION STRINGS-->
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit evaluation</string>
    <!--FOR BOOK ATRIBUTES-->
    <string name="addTitle">Title</string>
    <string name="addAuthor">Author</string>
    <string name="addYear">Year</string>
    <string name="addCategory">Category</string>
    <string name="addPersonalOp">Personal evaluation</string>
    <string name="addPublisher">Publisher</string>
    <!--FOR NO BOOKS AVEILABLES-->
    <string name="noContinue">There are empty values. Title, author, year, publisher and category are required fields.</string>
    <!--FOR BOOK EDITION-->
    <string name="book_added">Book added</string>
    <string name="Cancel">Cancel</string>
    <!--FOR SEARCH-->
    <string name="search_hint">Search by author</string>
    <string name="search_label">Search
    </string>
    <!--HELP-->
    <string name="help">
        <b>1. How to add books? \n</b>Click on the orange floating button. A form will open. Complete the form,
        all fields are required, except your personal evaluation. You can modified it later.\n \n \n
        <b>2. How to delete books? \n</b>There are two ways for delete books:\n
                2.1 Delete book with card long press: long press on the respective card book to delete. A dialog will open with to options,
            select "Delete" for delete or "Cancel" for cancel the operation.\n
                2.2 Delete on the book view: click on the respective card book. A view with book information will open, click in the expand menu (top-right of the
            toolbar). You will see a option for delete the book that you have select before\n \n \n
        <b>3. How to modify personal evaluation? \n</b>
            Click on the respective card book. A view with book information will open, click at pencil icon for modify your book personal evaluation. \n
    </string>
</resources>
